@@ -1,6 +1,6 @@
 Package: pcxn
 Type: Package
-Version: 1.1.0
+Version: 0.99.8
 Title: Exploring, analyzing and visualizing functions utilizing the pcxnData package
 Description: Discover the correlated pathways/gene sets of a single pathway/gene set or discover correlation relationships among multiple pathways/gene sets. Draw a heatmap or create a network of your query and extract members of each pathway/gene set found in the available collections (MSigDB H hallmark, MSigDB C2 Canonical pathways, MSigDB C5 GO BP and Pathprint). 
 Author: Sokratis Kariotis, Yered Pita-Juarez, Winston Hide, Wenbin Wei
